# StorViz

./: README.en.md  README.ja.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analyze/: page.tsx
src/app/home/: page.tsx
src/components/: LanguageSwitcher.tsx  StatsDisplay.tsx  ThemeToggle.tsx  footer.tsx
src/lib/: statsStorage.ts
